--- a/app/index.html
+++ b/app/index.html
@@ -41,5 +41,6 @@
 <script src="/scripts/controllers/MessengerCtrl.js"></script>
 <script src="/scripts/controllers/ModalCtrl.js"></script>
 <script src="/scripts/services/Room.js"></script>
+<script src="/scripts/services/Message.js"></script>
 </body>
 </html>
