--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 <!-- AngularUI Bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
 
+
 <script>
 
   // Initialize Firebase
@@ -42,5 +43,6 @@
 <script src="/scripts/controllers/ModalCtrl.js"></script>
 <script src="/scripts/services/Room.js"></script>
 <script src="/scripts/services/Message.js"></script>
+<script src="/scripts/services/Signin.js"></script>
 </body>
 </html>
