add signup/in Ctrl

--- a/app/index.html
+++ b/app/index.html
@@ -16,11 +16,15 @@
 <!-- AngularUI Router -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
 <!-- FireBase -->
-     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+<!-- FireBase Auth --> 
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
 <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
 <!-- AngularUI Bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+    
+
 
 
 <script>
@@ -40,9 +44,10 @@
 <!-- Application Files -->
 <script src="/scripts/app.js"></script>
 <script src="/scripts/controllers/MessengerCtrl.js"></script>
+<script src="/scripts/controllers/SigninCtrl.js"></script>
 <script src="/scripts/controllers/ModalCtrl.js"></script>
 <script src="/scripts/services/Room.js"></script>
 <script src="/scripts/services/Message.js"></script>
-<script src="/scripts/services/Signin.js"></script>
+
 </body>
 </html>
