--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,18 @@
 <!-- AngularUI Router -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
 <!-- FireBase -->
+    
 <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
 <!-- FireBase Auth --> 
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
-<!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+
 <!-- AngularUI Bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+
+<!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+
     
 
 
