--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,8 @@
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
 
-    
+  <!--Cookies-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
 
 
 
@@ -53,6 +54,9 @@
 <script src="/scripts/controllers/ModalCtrl.js"></script>
 <script src="/scripts/services/Room.js"></script>
 <script src="/scripts/services/Message.js"></script>
+<script src="/scripts/services/MessengerCookies.js"></script>
+
+
 
 </body>
 </html>
