send message fix

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Messenger</title>
+<!--    add favicon-->
+<!--    consider using sass, start with codeacademy-->
+<!--
+    This video has some nice hotkeys https://www.youtube.com/watch?v=bo5MM2N_3tw
+And packages: http://www.jonobacon.org/2015/11/16/atom-my-new-favorite-code-editor/ (you don't need all of them)
+I'd also check out "autosave" package which will be already installed. Select it, scroll down, and check "Enabled"
+-->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/messenger.css">
